--- a/learn-file/learn_demo/pom.xml
+++ b/learn-file/learn_demo/pom.xml
@@ -44,6 +44,15 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.simple-spring-memcached/spymemcached -->
+		<dependency>
+			<groupId>com.google.code.simple-spring-memcached</groupId>
+			<artifactId>spymemcached</artifactId>
+			<version>2.8.4</version>
+		</dependency>
+
+
 	</dependencies>
 
 
