--- a/learn-file/learn_demo/pom.xml
+++ b/learn-file/learn_demo/pom.xml
@@ -52,6 +52,13 @@
 			<version>2.8.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.thetransactioncompany/cors-filter -->
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>cors-filter</artifactId>
+			<version>2.5</version>
+		</dependency>
+
 
 	</dependencies>
 
