--- a/redis/redis_demo/redis_demo/pom.xml
+++ b/redis/redis_demo/redis_demo/pom.xml
@@ -8,6 +8,14 @@
 	<name>redis_demo Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>4.0.5.RELEASE</spring.version>
+		<!--dubbo 2.4.10依赖sping2.5架包 会导致冲突 -->
+		<dubbo.version>2.4.10</dubbo.version>
+		<zkclient.version>0.1</zkclient.version>
+	</properties>
+
 	<profiles>
 		<profile>
 			<id>dev</id>
@@ -45,11 +53,10 @@
 			<version>2.9.0</version>
 		</dependency>
 
-
-
 	</dependencies>
 	<build>
 		<finalName>redis_demo</finalName>
+		
 		<filters>
 			<filter>src/main/filters/filter-${pom.filter.name}.properties</filter>
 		</filters>
@@ -59,7 +66,6 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
@@ -73,5 +79,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		
 	</build>
 </project>
