增加了东西

--- a/redis/redis_demo/redis_demo/src/main/resources/log4j.properties
+++ b/redis/redis_demo/redis_demo/src/main/resources/log4j.properties
@@ -1,3 +1,4 @@
+#需要3步:1.配置Logger;2.logger.日志的范围;3.配置appender,写日志的方式;
 #1.配置根Logger
 #格式:log4j.rootLogger = [ level ] , appenderName, appenderName, …
 #level=debug,info,warn,error
