--- a/redis/redis_demo/redis_demo/pom.xml
+++ b/redis/redis_demo/redis_demo/pom.xml
@@ -53,10 +53,27 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+			<scope>test</scope>
+		</dependency>
+
+
+
 	</dependencies>
 	<build>
 		<finalName>redis_demo</finalName>
-		
+
 		<filters>
 			<filter>src/main/filters/filter-${pom.filter.name}.properties</filter>
 		</filters>
@@ -79,6 +96,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 	</build>
 </project>
