--- a/redis/redis_demo/redis_demo/pom.xml
+++ b/redis/redis_demo/redis_demo/pom.xml
@@ -75,6 +75,14 @@
 			<version>2.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-solrj -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>5.3.1</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>redis_demo</finalName>
