--- a/base-utils/pom.xml
+++ b/base-utils/pom.xml
@@ -76,6 +76,15 @@
 			<version>1.9.40</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.6</version>
+			<type>pom</type>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>base-utils</finalName>
