--- a/Ffmpeg/pom.xml
+++ b/Ffmpeg/pom.xml
@@ -22,6 +22,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 		<!-- jedis -->
 		<dependency>
 			<groupId>redis.clients</groupId>
