扫描ts/m3u8文件程序

--- a/Ffmpeg/src/main/resources/log4j.properties
+++ b/Ffmpeg/src/main/resources/log4j.properties
@@ -5,8 +5,8 @@
 log4j.rootLogger=debug,A
 
 #可以根据包名,来打印日志
-log4j.logger.com.loujie.www.test=debug,B
-log4j.logger.com.loujie.www.ox=debug,C
+log4j.logger.www.loujie.com=debug,B
+log4j.logger.www.loujie.com=debug,C
 
 #2.配置appender,日志输出目的地
 #目的地为控制台,都实现了Appender接口
@@ -24,7 +24,7 @@ log4j.appender.A.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - 
 #每天产生一个日志文件
 log4j.appender.B= org.apache.log4j.DailyRollingFileAppender  
 #文件位置
-log4j.appender.B.File=../logs/log.log
+log4j.appender.B.File=logs/log.log
 #追加
 log4j.appender.B.Append=true
 log4j.appender.B.Threshold=info
@@ -35,7 +35,7 @@ log4j.appender.B.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - 
 #每天产生多个日志文件,根据日志文件大小
 log4j.appender.C= org.apache.log4j.RollingFileAppender  
 #文件位置
-log4j.appender.C.File=../logs/abc.log
+log4j.appender.C.File=logs/abc.log
 #追加
 log4j.appender.C.Append=true
 log4j.appender.C.Threshold=info
