--- a/Ffmpeg/src/main/resources/log4j.properties
+++ b/Ffmpeg/src/main/resources/log4j.properties
@@ -6,7 +6,6 @@ log4j.rootLogger=debug,A
 
 #可以根据包名,来打印日志
 log4j.logger.www.loujie.com=debug,B
-log4j.logger.www.loujie.com=debug,C
 
 #2.配置appender,日志输出目的地
 #目的地为控制台,都实现了Appender接口
@@ -14,7 +13,7 @@ log4j.appender.A=org.apache.log4j.ConsoleAppender
 #日志输出的位置,控制台
 log4j.appender.A.Target=System.out
 #那个级别日志输出
-log4j.appender.A.Threshold=debug
+log4j.appender.A.Threshold=info
 #输出日志格式的布局,Layout抽象类
 log4j.appender.A.layout=org.apache.log4j.PatternLayout
 #格式
@@ -24,20 +23,9 @@ log4j.appender.A.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - 
 #每天产生一个日志文件
 log4j.appender.B= org.apache.log4j.DailyRollingFileAppender  
 #文件位置
-log4j.appender.B.File=logs/log.log
+log4j.appender.B.File=logs/error.log
 #追加
 log4j.appender.B.Append=true
-log4j.appender.B.Threshold=info
+log4j.appender.B.Threshold=error
 log4j.appender.B.layout=org.apache.log4j.PatternLayout  
 log4j.appender.B.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
-
-#4.配置另一个appender
-#每天产生多个日志文件,根据日志文件大小
-log4j.appender.C= org.apache.log4j.RollingFileAppender  
-#文件位置
-log4j.appender.C.File=logs/abc.log
-#追加
-log4j.appender.C.Append=true
-log4j.appender.C.Threshold=info
-log4j.appender.C.layout=org.apache.log4j.PatternLayout  
-log4j.appender.C.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
