--- a/base-utils/pom.xml
+++ b/base-utils/pom.xml
@@ -84,6 +84,13 @@
 			<type>pom</type>
 		</dependency>
 
+		
+<!-- https://mvnrepository.com/artifact/com.janeluo/ikanalyzer -->
+		<dependency>
+			<groupId>com.janeluo</groupId>
+			<artifactId>ikanalyzer</artifactId>
+			<version>2012_u6</version>
+		</dependency>
 
 	</dependencies>
 	<build>
