--- a/spring4/pom.xml
+++ b/spring4/pom.xml
@@ -39,7 +39,7 @@
 	</profiles>
 
 	<dependencies>
-
+		<!-- jutil测试 -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
