--- a/springmvc-easyui/src/main/filters/test-filter.properties
+++ b/springmvc-easyui/src/main/filters/test-filter.properties
@@ -3,7 +3,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://118.144.248.23:3307/pcloudaboard?useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull
 #jdbc.username=mmysql
 #jdbc.password=m12345
-jdbc.url=jdbc:mysql://localhost:3306/pcloudaboard?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://localhost:3306/local_study?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull
 jdbc.username=root
 jdbc.password=admin
 jdbc.maxActive=30
