--- a/springmvc-easyui/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-easyui/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,8 @@
 
 	<servlet-mapping>
 		<servlet-name>springDispatcherServlet</servlet-name>
+		<url-pattern>*.json</url-pattern>
+		<url-pattern>*.xml</url-pattern>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
