--- a/springmvc-easyui/src/main/filters/deploy-filter.properties
+++ b/springmvc-easyui/src/main/filters/deploy-filter.properties
@@ -14,3 +14,13 @@ mybatis.sqlSessionFactory.typeAliasesPackage=com.loujie.easyui.entity
 mybatis.sqlSessionFactory.configLocation=classpath:mybatis/SqlMapConfig.xml
 mybatis.sqlSessionFactory.mapperLocations=classpath:mappers/**/*.xml
 mybatis.MapperScannerConfigurer.basePackage=com.loujie.easyui.dao
+
+#spring mvc,global
+context.component.scan=com.loujie.easyui
+
+
+#spring tx
+spring.tx.txAdvice.pointcut=com.loujie.easyui.service
+
+#logback
+logback.log.path=logs/
