--- a/springmvc-easyui/src/main/filters/test-filter.properties
+++ b/springmvc-easyui/src/main/filters/test-filter.properties
@@ -21,3 +21,6 @@ context.component.scan=com.loujie.easyui
 
 #spring tx
 spring.tx.txAdvice.pointcut=com.loujie.easyui.service
+
+#logback
+logback.log.path=logs/
